# waspi

./: README.md  accel_test.py  arduino_serial.py  camera_settings.py  camera_test.py  config_mqtt_template.py  data.py  heartbeat.py  ingest_per_arduino.py  main.py  new_main.py  old_main.py  pyproject.toml  types.py  waspi_types.py  weight_scale.py  weight_sensing.py
arduino/arduino_waspi/: arduino_waspi.ino
components/: 1691504356.h264  20230808_152206.h264  20230808_152710.h264  20230808_152714.h264  20230808_152718.h264  20230808_152728.h264  __init__.py  accel_logger.py  accellogger.py  data.py  image_capture.py  main.py  mcp3002.py  message_factories.py  messengers.py  new_main.py  old_sensor_manager.py  peter_code.py  rpi_scale.py  sensor_manager.py  sensor_manager_list.py  serial_reader.py  sht45.py  test_image.py  types.py  waspi_serial.py  waspi_types.py  waspi_util.py  weight_sensing.py
components/pySerialTransfer/: CRC.py
docs/installation_documents/: README.md
hx711/: calibration.py  example.py  get_weight.py  hx711.py
installation_documents/: README.md
new_hx711.py/: calibrate.py  hx711.py  read_test.py  utils.py
pySerialTransfer/: __init__.py  pySerialTransfer.py
scripts/: gdrive_backup.sh  setup_heartbeat.sh  start_waspi.sh  telegraf-waspi.conf
services/: accel_rec.service  audio_rec.service  camera.service  heartbeat.service  run_waspi.service  sensor_ser.service
src/: accel_rec.py  audio_rec.py  main.py  main_multiprocess.py  main_test.py  old_main.py  sensor_ser.py
src/waspi/: camera.py  camera_settings.py  camera_video.py  data.py  heartbeat.py
src/waspi/components/: __init__.py  accel_logger.py  (+14 more)
(+12 files in other folders)
