[project]
name = "Waspi"
version = "0.1.0"
description = "A python package to monitor wasps."
authors = [
    {name = "Aude Vuilliomenet", email = "aude.vuilliomenet.18@ucl.ac.uk"},
]
dependencies = [
    "arrow>=1.2.3",
    "pydantic>=2.3.0",
    "paho-mqtt>=1.6.1",
    "influxdb2 @ https://dl.influxdata.com/influxdb/releases/influxdb2-2.7.0-linux-arm64.tar.gz",
    "telegraf @ https://dl.influxdata.com/telegraf/releases/telegraf-1.27.4_linux_arm64.tar.gz",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
